--- a/Milana/Milana/index.html
+++ b/Milana/Milana/index.html
@@ -201,10 +201,15 @@
                </div>
 
 
-               <footer>
+               <footer class="footer">
 
+                  <div class="footer__container">
+                     <div class="footer__title">натисни на кружок</div>
+                     <div class="footer__pic">
+                        <img class="footer__img" src="img/last.webp" alt="">
+                     </div>
 
-
+                  </div>
 
                </footer>
 
